--- a/pages/scroll-anchor/scroll-anchor.wxml
+++ b/pages/scroll-anchor/scroll-anchor.wxml
@@ -1,1 +1,7 @@
 <nav-top opactiy="{{0}}" title="电 影"></nav-top>
+<view class="page-container">
+    <view class="tab-hd">
+        <view wx:for="{{tabs}}" wx:key="code" class="tab-item">{{item.title}}</view>
+    </view>
+    <scroll-view class="tab-bd"></scroll-view>
+</view>
