--- a/components/nav-top/nav-top.wxss
+++ b/components/nav-top/nav-top.wxss
@@ -1,7 +1,11 @@
 .nav-top {
-    position: relative;
-    background: #000;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: 10000;
     box-sizing: border-box;
+    width: 100%;
+    background: #000;
 }
 .nav-top-inner {
     position: relative;
