--- a/pages/scroll-anchor/scroll-anchor.wxml
+++ b/pages/scroll-anchor/scroll-anchor.wxml
@@ -1,7 +1,40 @@
-<nav-top opactiy="{{0}}" title="电 影"></nav-top>
-<view class="page-container">
-    <view class="tab-hd">
-        <view wx:for="{{tabs}}" wx:key="code" class="tab-item">{{item.title}}</view>
-    </view>
-    <scroll-view class="tab-bd"></scroll-view>
+<nav-top opacity="{{1}}" title="电 影"></nav-top>
+<view class="page-container" style="top:{{navTotalHeight}}px">
+    <scroll-view 
+        class="tab-hd"
+        style="top:{{navTotalHeight}}px;width:{{screenWidth}}px"
+        scroll-x="{{true}}"
+        enable-flex="{{true}}">
+        <view class="tab-hd-inner">
+            <view 
+                wx:for="{{tabs}}"
+                wx:key="code"
+                data-index="{{index}}"
+                bindtap="changeTab"
+                class="tab-item {{activeTab === index ? 'active' : ''}}">
+                {{item.title}}
+            </view>
+        </view>
+    </scroll-view>
+    <scroll-view 
+        scroll-y="{{true}}"
+        scroll-into-view="{{anchorId}}"
+        scroll-with-animation="{{true}}"
+        style="height:{{scrollContentHt}}px"
+        class="scroll-container">
+        <view 
+            wx:for="{{tabs}}"
+            wx:for-item="movie"
+            wx:key="code"
+            data-index="{{index}}"
+            class="section"
+            id="{{movie.code}}">
+            <view class="section-hd">{{movie.title}}</view>
+            <view class="section-bd">
+                <view class="movie-item" wx:for="{{movie.recommends}}" wx:key="index">
+                    <image src="{{item.poster}}" class="poster-img"></image>
+                </view>
+            </view>
+        </view>
+    </scroll-view>
 </view>
