--- a/pages/scroll-anchor/scroll-anchor.wxss
+++ b/pages/scroll-anchor/scroll-anchor.wxss
@@ -65,6 +65,13 @@ page {
   box-sizing: border-box;
   width: 50%;
   margin-top: 50rpx;
+  opacity: 0.2;
+  transition: .6s;
+  transform: translateY(40rpx);
+}
+.movie-item.flow {
+  opacity: 1;
+  transform: translateY(0px);
 }
 .poster-img {
   width: 230rpx;
