--- a/pages/scroll-driven-animation/index.wxml
+++ b/pages/scroll-driven-animation/index.wxml
@@ -3,17 +3,22 @@
     id="scroller"
     class="scroll-container"
     scroll-y="{{true}}"
-    style="padding-top:{{navTotalHeight}}px">
+    style="padding-top:{{navTotalHeight}}px"
+    bindscroll="scrollHandler">
     <view class="scroll-inner">
-        <view class="section section_1">
-            <view class="title">{{contents.sectionOne.title}}</view>
-            <image class="img" src="{{contents.sectionOne.img}}" mode="widthFix"></image>
-            <view class="desc">{{contents.sectionOne.desc}}</view>
+        <view class="section section_1" style="height:{{contentHeight}}px">
+            <view class="section_inner">
+                <view class="title">{{contents.sectionOne.title}}</view>
+                <image class="img" src="{{contents.sectionOne.img}}" mode="widthFix"></image>
+                <view class="desc">{{contents.sectionOne.desc}}</view>
+            </view>
         </view>
-        <view class="section section_2">
-            <view class="title">{{contents.sectionTwo.title}}</view>
-            <image class="img" src="{{contents.sectionTwo.img}}" mode="widthFix"></image>
-            <view class="desc">{{contents.sectionTwo.desc}}</view>
+        <view class="section section_2" style="height:{{contentHeight}}px">
+            <view class="section_inner">
+                <view class="title">{{contents.sectionTwo.title}}</view>
+                <image class="img" src="{{contents.sectionTwo.img}}" mode="widthFix"></image>
+                <view class="desc">{{contents.sectionTwo.desc}}</view>
+            </view>
         </view>
     </view>
 </scroll-view>
