--- a/pages/scroll-driven-animation/index.wxss
+++ b/pages/scroll-driven-animation/index.wxss
@@ -7,6 +7,7 @@ page {
     box-sizing: border-box;
 }
 .scroll-inner {
+    width: 100%;
     box-sizing: border-box;
     padding: 0px 40rpx 80rpx;
 }
@@ -17,32 +18,35 @@ page {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     color: #fff;
 }
+.section .img {
+    width: 100%;
+}
+.section_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .section_1 {
-    padding: 120rpx 0px 0px;
+    padding: 30rpx 0px 0px;
 }
 .section_1 .title {
     font-size: 18px;
-    margin-bottom: 60rpx;
+    margin-bottom: 40rpx;
 }
-/* .section_1 .img {
-    width: 80%;
-} */
 .section_1 .desc {
     width: 70%;
     margin-top: 50rpx;
     font-size: 14px;
 }
 .section_2 {
-    margin-top: 300rpx;
     padding: 80rpx 0px 0px;
 }
 .section_2 .title {
-    margin-bottom: 80rpx;
-}
-.section_2 .img {
-    width: 80%;
+    margin-bottom: 60rpx;
+    font-size: 16px;
 }
 .section_2 .desc {
     width: 70%;
