--- a/pages/scroll-driven-animation/index.wxss
+++ b/pages/scroll-driven-animation/index.wxss
@@ -29,26 +29,33 @@ page {
     flex-direction: column;
     align-items: center;
 }
-.section_1 {
+.section-1 {
     padding: 30rpx 0px 0px;
 }
-.section_1 .title {
+.section-1 .title {
     font-size: 18px;
     margin-bottom: 40rpx;
 }
-.section_1 .desc {
+.section-1 .desc {
     width: 70%;
     margin-top: 50rpx;
     font-size: 14px;
 }
-.section_2 {
+.section-2 {
     padding: 80rpx 0px 0px;
 }
-.section_2 .title {
+.section-2 .title {
     margin-bottom: 60rpx;
     font-size: 16px;
 }
-.section_2 .desc {
+.section-2 .img-cover {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0px;
+    top: 0px;
+}
+.section-2 .desc {
     width: 70%;
     margin-top: 50rpx;
     font-size: 14px;
